--- a/index.html
+++ b/index.html
@@ -8,61 +8,29 @@
 <link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
+	
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+	<h1>Welcome to the Order of Bahamut</h1>
 
-<h1> Welcome to Vivadel City </h1>
-<img src="VivdaelCity.png">
-
-<p></p><p></p>
-<div>
-  <input type="checkbox" class="read-more-state" id="post-1" />
-
-  <span class="read-more-wrap">
-    <div class="headingBox">Dragon Scrolls</div><label for="post-1" class="read-more-trigger">See More</label>
-      <li class="read-more-target">Scroll of Aspect of the Wolf (apg, 1125 gp)</li>
-      <li class="read-more-target">Scroll of Blink (cr, 375 gp)</li>
-      <li class="read-more-target">Scroll of Communal Protection from Energy (uc, 700 gp)</li>
-      <li class="read-more-target">Scroll of Disguise Other (um, 150 gp)</li>
-      <li class="read-more-target">Scroll of Mirror Image (cr, 150 gp)</li>
-      <li class="read-more-target">Scroll of Scorching Ray (cr, 150 gp)</li>
-      <li class="read-more-target">Scroll of Shield of Faith (cr, 25 gp)</li>
-  </span>
-  
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="vivadel.html">Vivadel</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
 </div>
 
-<div>
-  <input type="checkbox" class="read-more-state" id="post-2" />
 
-  <span class="read-more-wrap">
-    <div class="headingBox">Silverback Armory</div><label for="post-2" class="read-more-trigger">See More</label>
-      <li class="read-more-target">Breastplate (+1 armor) (1350 gp)</li>
-      <li class="read-more-target">Chainmail (+1 armor) (1300 gp)</li>
-      <li class="read-more-target">Heavy Steel Shield (+2 shield) (4170 gp)</li>
-      <li class="read-more-target">Heavy Wooden Shield (+1 shield, Spell Resistance (13)) (9157 gp)</li>
-      <li class="read-more-target">Hide (+2 armor) (4165 gp)</li>
-      <li class="read-more-target">Light Steel Shield (+1 shield) (1159 gp)</li>
-      <li class="read-more-target">Splint Mail (+1 armor, Shadow) (5100 gp)</li>
-  </span>
-  
-</div>
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "200px";
+}
 
-<div>
-  <input type="checkbox" class="read-more-state" id="post-3" />
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+}
+</script>
 
-  <span class="read-more-wrap">
-    <div class="headingBox">Avian's Wands</div><label for="post-3" class="read-more-trigger">See More</label>
-      <li class="read-more-target">Wand of Daze (cr, 375 gp)</li>
-      <li class="read-more-target">Wand of Death Ward (cr, 21000 gp)</li>
-      <li class="read-more-target">Wand of Deep Slumber (cr, 11250 gp)</li>
-      <li class="read-more-target">Wand of Delay Poison (cr, 4500 gp)</li>
-      <li class="read-more-target">Wand of Divine Favor (cr, 750 gp)</li>
-      <li class="read-more-target">Wand of Hold Person (cr, 4500 gp)</li>
-      <li class="read-more-target">Wand of Light (cr, 375 gp)</li>
-  </span>
-  
-</div>
+
 
 </body>
-<footer>
-	Made by Sarah Kells, 2017
-</footer>
-</html>
