--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="vivadel.html">Vivadel</a>
-  <a href="#">Services</a>
+  <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
