Adding map of erith and linking to pages

--- a/Erith.html
+++ b/Erith.html
@@ -3,23 +3,21 @@
 <head>
 <meta charset = "utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Vivadel City Map</title>
+<title>Map of Erith</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
-	
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
-	<h1>Welcome to the Order of Bahamut</h1>
-
+<h1> Welcome to the Province of Erith</h1>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="vivadel.html">Vivadel</a>
+  <a href="index.html">Home</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
-  <a href="Erith.html">Province of Erith</a>
+  <a href="vivadel.html">Vivadel</a>
 </div>
 
-
+<img src="MapOfErith.png">
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "200px";
@@ -30,6 +28,7 @@ function closeNav() {
 }
 </script>
 
+<p></p><p></p>
 </body>
 <footer>
 	Made by Sarah Kells, 2017
