--- a/vivadel.html
+++ b/vivadel.html
@@ -14,8 +14,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="Erith.html">Province of Erith</a>
 </div>
 
 <img src="VivdaelCity.png">
