Adding goldcliffe city and linking all the pages

--- a/Erith.html
+++ b/Erith.html
@@ -13,8 +13,10 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
-  <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="vivadel.html">Vivadel</a>
+  <a href="GoldCliffe.html">GoldCliffe</a>
+  <a href="FantasyMacro.html">Fantasy Macro</a>
+  
 </div>
 
 <img src="MapOfErith.png">
