--- a/GoldCliffe.html
+++ b/GoldCliffe.html
@@ -3,22 +3,39 @@
 <head>
 <meta charset = "utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Vivadel City Map</title>
+<title>Goldcliffe City Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
-	
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
-	<h1>Welcome to the Order of Bahamut</h1>
-
+<h1> Welcome to Goldcliffe City </h1>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="vivadel.html">Vivadel</a>
-  <a href="GoldCliffe.html">GoldCliffe</a>
+  <a href="index.html">Home</a>
+  <a href="vivdel.html">Vivadel City</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="Erith.html">Province of Erith</a>
 </div>
+
+<img src="GoldVille.png">
+
+<p></p><p></p>
+
+<img src="decagonArena.png">
+<p></p><p></p>
+<div>
+  <input type="checkbox" class="read-more-state" id="post-1" />
+
+  <span class="read-more-wrap">
+    <div class="headingBox">Snack Stall</div><label for="post-1" class="read-more-trigger">See More</label>
+      <li class="read-more-target">Nachos (Recovers 20HP) (apg, 750 gp)</li>
+      <li class="read-more-target">Full Fat Cola (Recovers 7HP) (cr, 200 gp)</li>
+      <li class="read-more-target">Sweet n' Salted Popcorn (Recovers 10HP) (cr, 300gp)</li>
+  </span>
+  
+</div>
+
 
 
 <script>
@@ -30,7 +47,6 @@ function closeNav() {
     document.getElementById("mySidenav").style.width = "0";
 }
 </script>
-
 </body>
 <footer>
 	Made by Sarah Kells, 2017
