--- a/FantasyMacro.html
+++ b/FantasyMacro.html
@@ -15,6 +15,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
   <a href="vivadel.html">Vivadel</a>
+  <a href="GoldCliffe.html">GoldCliffe</a>
   <a href="Erith.html">Province of Erith</a>
 </div>
 
