--- a/vivadel.html
+++ b/vivadel.html
@@ -13,6 +13,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
+  <a href="GoldCliffe.html">GoldCliffe</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="Erith.html">Province of Erith</a>
 </div>
