--- a/GoldCliffe.html
+++ b/GoldCliffe.html
@@ -13,7 +13,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
-  <a href="vivdel.html">Vivadel City</a>
+  <a href="vivadel.html">Vivadel City</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="Erith.html">Province of Erith</a>
 </div>
