adding goldcliffe rankings and links

--- a/GoldCliffe.html
+++ b/GoldCliffe.html
@@ -19,23 +19,9 @@
 </div>
 
 <img src="GoldVille.png">
-
-<p></p><p></p>
-
 <img src="decagonArena.png">
-<p></p><p></p>
-<div>
-  <input type="checkbox" class="read-more-state" id="post-1" />
 
-  <span class="read-more-wrap">
-    <div class="headingBox">Snack Stall</div><label for="post-1" class="read-more-trigger">See More</label>
-      <li class="read-more-target">Nachos (Recovers 20HP) (apg, 750 gp)</li>
-      <li class="read-more-target">Full Fat Cola (Recovers 7HP) (cr, 200 gp)</li>
-      <li class="read-more-target">Sweet n' Salted Popcorn (Recovers 10HP) (cr, 300gp)</li>
-  </span>
-  
-</div>
-
+<p> Welcome to GoldCliffe City! Home of GOLDCLIFFE PITS WRESTLING and the DECAGON ARENA! Check out the <a href="GoldCliffeRankings.html">latest rankings here</a>, and enjoy your stay!</p>
 
 
 <script>
