Bug fix: more problems with linkage lol

--- a/GoldCliffeRankings.html
+++ b/GoldCliffeRankings.html
@@ -14,7 +14,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
   <a href="vivadel.html">Vivadel City</a>
-  <a href="Goldcliffe.html">GoldCliffe City</a>
+  <a href="GoldCliffe.html">GoldCliffe City</a>
   <a href="FantasyMacro.html">Fantasy Macro</a>
   <a href="Erith.html">Province of Erith</a>
 </div>
