--- a/FantasyMacro.html
+++ b/FantasyMacro.html
@@ -192,6 +192,16 @@ function closeNav() {
 <td>It&#39;s a-me, Mario! Allows user to double jump </td>
 <td>1000</td>
 </tr>
+<tr>
+<td>Shiny Brooch</td>
+<td>Nothing special but it's quite pretty</td>
+<td>400</td>
+</tr>
+<tr>
+<td>Stephen</td>
+<td>The Legend</td>
+<td>600</td>
+</tr>
 </tbody></table>
 </body>
 <footer>
